# python-template

./: .pylintrc  Makefile  README.md  mypy.ini  pyproject.toml
.github/actions/setup-check/: action.yml
.github/workflows/: check.yml  ci.yml
src/: main.py
