[tool.poetry]
name = "python-template"
version = "0.0.1"
description = ""
authors = ["Aaron Mamparo <aaronmamparo@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
pylint-quotes = "^0.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
