[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = [
    {name = "Aaron Mamparo",email = "aaronmamparo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
package-mode = false
dependencies = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.6"
mypy = "^1.15.0"

